--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.5"
+    },
+    "autoload": {
+        "classmap": [
+            "classes"
+        ]
     }
 }
